[package]
name = "dust-manipulator"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.10"
sdl3 = { version = "0", features = [ "build-from-source-static" ] }
sdl3-sys = { version = "0.4.6", features = ["build-from-source-static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.6"
defer-rs = "0.1"

[target.'cfg( target_os = "windows" )'.dependencies]
sdl3-ttf-sys = { version="0.1.3", features = ["build-from-source-static", "no-sdlttf-harfbuzz"] }

[target.'cfg( target_os = "linux" )'.dependencies]
sdl3-ttf-sys = { version="0.1.3", features = ["build-static-vendored", "no-sdlttf-harfbuzz"] }

[dependencies.windows-sys]
version = "0.59"
features = [
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
copy_to_output = "2.1.0"
glob = "0.3"
