[package]
name = "dust-manipulator"
version = "1.1.0"
edition = "2021"

[features]
console = []
dust_manipulator = []

[dependencies]
rayon = "1.11"
sdl3 = { version = "0", features = [ "build-from-source-static" ] }
sdl3-sys = { version = "0.5.11", features = ["build-from-source-static"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25.9"
defer-rs = "0.1"
human-panic = "2.0.6"

[target.'cfg( target_os = "windows" )'.dependencies]
sdl3-ttf-sys = { version="0.2.0", features = ["build-from-source-static", "no-sdlttf-harfbuzz"] }

[target.'cfg( target_os = "linux" )'.dependencies]
sdl3-ttf-sys = { version="0.2.0", features = ["build-static-vendored", "no-sdlttf-harfbuzz"] }

[dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_UI_WindowsAndMessaging"
]

[build-dependencies]
copy_to_output = "2.2.0"
glob = "0.3"
